= 4.8.1 (Unreleased)

* When the html.parser or html5lib parsers are in use, Beautiful Soup
  will, by default, record the position in the original document where
  each tag was encountered. This includes line number (Tag.sourceline)
  and position within a line (Tag.sourcepos).  Based on code by Chris
  Mayo. [bug=1742921]

* Fixed a crash when pretty-printing tags that were not created
   during initial parsing. [bug=1838903]

* Copying a Tag preserves information that was originally obtained from
   the TreeBuilder used to build the original Tag. [bug=1838903]

* When instantiating a BeautifulSoup object, it's now possible to
   provide replacement classes to be instantiated for every tag ('tag_class')
   or string ('string_class') encountered during parsing, rather than
   using the default Tag and NavigableString objects.

= 4.8.0 (20190720, "One Small Soup")

This release focuses on making it easier to customize Beautiful Soup's
input mechanism (the TreeBuilder) and output mechanism (the Formatter).

* You can customize the TreeBuilder object by passing keyword
  arguments into the BeautifulSoup constructor. Those keyword
  arguments will be passed along into the TreeBuilder constructor.

  The main reason to do this right now is to change how which
  attributes are treated as multi-valued attributes (the way 'class'
  is treated by default). You can do this with the
  'multi_valued_attributes' argument. [bug=1832978]

* The role of Formatter objects has been greatly expanded. The Formatter
  class now controls the following:

  - The function to call to perform entity substitution. (This was
    previously Formatter's only job.)
  - Which tags should be treated as containing CDATA and have their
    contents exempt from entity substitution.
  - The order in which a tag's attributes are output. [bug=1812422]
  - Whether or not to put a '/' inside a void element, e.g. '<br/>' vs '<br>'

  All preexisting code should work as before.
